working on wind and humidity

--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,6 @@ button:hover {
   cursor: pointer;
 }
 
-.fasfa-cloud i {
-  display: block;
-  margin: 0 auto;
+.text-center p {
+  font-size: 80px;
 }
