--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,7 @@ button:hover {
 
 .left {
   float: left;
+  text-transform: capitalize;
 }
 
 .right {
@@ -110,4 +111,8 @@ button:hover {
 
 #main-city {
   clear: both;
+}
+
+.text-center img {
+  width: 100 px;
 }
